crates/djls-project/tests/snapshots/corpus__repos__hyperkitty__hyperkitty__templatetags__decorate.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
definitions:
  "filter::render":
    kind: filter
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities:
  "hyperkitty.templatetags.decorate::filter::render": required_argument
block_specs: {}
