crates/djls-project/tests/snapshots/corpus__repos__hyperkitty__hyperkitty__templatetags__hk_generic.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
tag_rules:
  "hyperkitty.templatetags.hk_generic::tag::export_allowed":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters: []
    as_var: strip
  "hyperkitty.templatetags.hk_generic::tag::gravatar":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters:
        - name: args
          requirement: optional
          kind: VarArgs
    as_var: strip
  "hyperkitty.templatetags.hk_generic::tag::is_message_new":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters:
        - name: refdate
          requirement: required
          kind: Variable
    as_var: strip
  "hyperkitty.templatetags.hk_generic::tag::settings_value_equals":
    arg_constraints:
      - Min: 3
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters:
        - name: name
          requirement: required
          kind: Variable
        - name: value
          requirement: required
          kind: Variable
    as_var: strip
filter_arities:
  "hyperkitty.templatetags.hk_generic::filter::date_with_senders_timezone": no_argument
  "hyperkitty.templatetags.hk_generic::filter::escapeemail": no_argument
  "hyperkitty.templatetags.hk_generic::filter::escapeemaillinks": no_argument
  "hyperkitty.templatetags.hk_generic::filter::get_item": required_argument
  "hyperkitty.templatetags.hk_generic::filter::is_unread_by": required_argument
  "hyperkitty.templatetags.hk_generic::filter::monthtodate": required_argument
  "hyperkitty.templatetags.hk_generic::filter::multiply": required_argument
  "hyperkitty.templatetags.hk_generic::filter::num_comments": no_argument
  "hyperkitty.templatetags.hk_generic::filter::reply_subject": no_argument
  "hyperkitty.templatetags.hk_generic::filter::snip_pgp": optional_argument
  "hyperkitty.templatetags.hk_generic::filter::snip_quoted": optional_argument
  "hyperkitty.templatetags.hk_generic::filter::sort": no_argument
  "hyperkitty.templatetags.hk_generic::filter::sort_by_name": no_argument
  "hyperkitty.templatetags.hk_generic::filter::strip_subject": required_argument
  "hyperkitty.templatetags.hk_generic::filter::to_json": no_argument
  "hyperkitty.templatetags.hk_generic::filter::truncatesmart": optional_argument
  "hyperkitty.templatetags.hk_generic::filter::until": required_argument
block_specs: {}
