crates/djls-project/tests/snapshots/corpus__repos__hyperkitty__hyperkitty__templatetags__hk_haystack.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
definitions:
  "filter::nolongterms":
    kind: filter
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities:
  "hyperkitty.templatetags.hk_haystack::filter::nolongterms": no_argument
block_specs: {}
